[package]
name = "xml-parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.26.0", features = ["serialize"]}
serde = { version = "1.0", features = ["derive"] }
time = "0.3.17"
