[package]
name = "dtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.26.0", features = ["serialize"]}
serde = { version = "1.0", features = ["derive"] }
time = "0.3.17"
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"